Cinnamon theme - using 'spacing' in menus, panel, buttons and dialog entries - bugfix

--- a/src/cinnamon/scss/sections/_dialogs.scss
+++ b/src/cinnamon/scss/sections/_dialogs.scss
@@ -57,7 +57,7 @@
 }
 .run-dialog {
     border-radius: $roundness;
-    padding: 16px 32px;
+    padding: 16px 20px;
 }
 // removable media dialogs
 .cinnamon-mount-operation-icon {
